Fixed centering problem on mobile devices

--- a/main.css
+++ b/main.css
@@ -160,7 +160,7 @@ body {
 }
 
 #header img {
-    width: 40px;
+    width: 60px;
 }
 
 
@@ -255,4 +255,9 @@ body {
 
 .btn:hover {
     background-color: rgba(255, 255, 255, 0.12);
+}
+
+
+.darkmode-toggle {
+    z-index: 1;
 }
